# flowlearn

./: .env  README.md
backend/: README.md  backend-1.py  backend-2.py  backend.py  pyproject.toml  run.py
backend/src/backend/: app.py  backend-2.py  backend.py  dummy_word_graph.py  word_graph.py
frontend/: README.md  package-lock.json  package.json
frontend/src/: App.tsx  d3_App.tsx  d3_App.txt  dashboard
frontend/src/components/: DetailPanel.txt  WordGraph.tsx
