[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "aryn-sdk>=0.2.3",
    "flask",
    "flask-cors",
    "google-generativeai",
    "python-dotenv>=1.1.0",
    "requests",
    "werkzeug",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
